# LearnRhine

./: .gitignore  CHANGELOG.md  Generic.cabal  LearnRhine.cabal  README.md  README.org  flake.nix  hie.yaml  result  rhine-sdl.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: baiz5s1za9p767s9xwsdfzgi4kff1py9-source  p9knhk970q0zh7iwp2a922p179bm5lnc-source  wg92lgybih4xy5lf8dp528bhvi6zal7g-source
app/: Example1.hs  Main.hs  Stdin.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
game/: ExampleObject.hs  Main.hs  SDLClock.hs
game/SDLClock/: SDLClock.hs  SDLQuitClock.hs
game/SDLInit/: SDLInit.hs
game/SDLRenderable/: SDLMovable.hs  SDLRenderable.hs  Type.hs
sprites/: Sprite-0001.aseprite  Sprite-0002.aseprite  Sprite-0003.aseprite
src/FRP/Rhine/: Extra.hs  SDL.hs
src/FRP/Rhine/ClSF/: Delay.hs
src/FRP/Rhine/Extra/: Schedule.hs
src/FRP/Rhine/MSFDelay/: Core.hs  Delay.hs  DelayErasure.hs
src/FRP/Rhine/MSFDelay/Delay/: FixedStepDelay.hs  Proxy.hs
src/FRP/Rhine/SDL/: Background.hs  Clock.hs  Components.hs  Entity.hs  Font.hs  Init.hs  Position.hs  Process.hs  Renderer.hs  Renerer.hs  Util.hs
src/FRP/Rhine/SDL/Clock/: SDLClock.hs  SDLQuitClock.hs
src/FRP/Rhine/SDL/Components/: Collision.hs  Position.hs  Rotation.hs  Sprite.hs  Velocity.hs
src/FRP/Rhine/SDL/Process/: Active.hs  Animate.hs  Collision.hs  Draw.hs  Movement.hs  Render.hs  Rotate.hs  Velocity.hs
src/FRP/Rhine/SDL/Renderer/: Draw.hs  Movable.hs  Render.hs  Renderable.hs  Type.hs
