cabal-version:      2.4
name:               rhine-sdl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org
    sprites/**/*.png
    fonts/**/*.ttf

library 
    hs-source-dirs:   src
    exposed-modules:  FRP.Rhine.SDL
                    , FRP.Rhine.SDL.Init
                    , FRP.Rhine.SDL.Entity
                    , FRP.Rhine.SDL.Util
                    , FRP.Rhine.SDL.Font

                    , FRP.Rhine.SDL.Clock
                    , FRP.Rhine.SDL.Clock.SDLClock
                    , FRP.Rhine.SDL.Clock.SDLQuitClock
                    
                    , FRP.Rhine.SDL.Process
                    , FRP.Rhine.SDL.Process.Render
                    , FRP.Rhine.SDL.Process.Draw
                    , FRP.Rhine.SDL.Process.Active
                    , FRP.Rhine.SDL.Process.Animate
                    , FRP.Rhine.SDL.Process.Movement
                    , FRP.Rhine.SDL.Process.Velocity
                    , FRP.Rhine.SDL.Process.Collision
                    , FRP.Rhine.SDL.Process.Rotate

                    , FRP.Rhine.SDL.Components
                    , FRP.Rhine.SDL.Components.Position
                    , FRP.Rhine.SDL.Components.Sprite
                    , FRP.Rhine.SDL.Components.Velocity
                    , FRP.Rhine.SDL.Components.Collision
                    , FRP.Rhine.SDL.Components.Rotation
    
    build-depends:    base ^>=4.15.1.0
                    , rhine
                    , vector-sized
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , time
                    , random
                    , generic-lens
                    , text
                    , stm
    default-language: Haskell2010


executable Game
    main-is:          Main.hs

    other-modules:    ExampleObject

    build-depends:    base ^>=4.15.1.0
                    , rhine-sdl
                    , rhine
                    , vector-sized
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , time
                    , random
                    , generic-lens
                    , text
                    , stm
    hs-source-dirs:   game
    default-language: Haskell2010

executable Example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Example1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , rhine
                    , vector-sized
    hs-source-dirs:   app
    default-language: Haskell2010
